# -aries-mobile-agent-android-

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.gradle  local.properties
gradle/wrapper/: gradle-wrapper.properties
src/androidTest/java/tech/indicio/ariesmobileagentandroid/: ExampleInstrumentedTest.java
src/main/: AndroidManifest.xml
src/main/java/tech/indicio/ariesmobileagentandroid/: Agent.java  EventEmitter.java  IndySdkRejectResponse.java  IndyWallet.java
src/main/java/tech/indicio/ariesmobileagentandroid/admin/: Admin.java  AdminMessageConfirmationRecord.java
src/main/java/tech/indicio/ariesmobileagentandroid/basicMessaging/: BasicMessageRecord.java  BasicMessaging.java
src/main/java/tech/indicio/ariesmobileagentandroid/connections/: Connection.java  ConnectionRecord.java  Connections.java  InvitationMessage.java
src/main/java/tech/indicio/ariesmobileagentandroid/credentials/: Credential.java
src/main/java/tech/indicio/ariesmobileagentandroid/events/: AriesEmitter.java  AriesEvent.java  AriesListener.java
src/main/java/tech/indicio/ariesmobileagentandroid/messaging/: BaseMessage.java  BasicMessage.java  MessageListener.java  MessageReceiver.java  MessageSender.java  ThreadHandler.java
src/main/java/tech/indicio/ariesmobileagentandroid/storage/: BaseRecord.java  Storage.java
src/main/java/tech/indicio/ariesmobileagentandroid/transports/: HTTPTransport.java  TransportService.java  WSClientTransport.java
src/test/java/tech/indicio/ariesmobileagentandroid/: ExampleUnitTest.java
(+85 files in other folders)
